k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: event-portal
  labels:
    app: smart-event-portal
